tests/ui/traits/trait-bound-mismatch-14853.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/trait-bound-mismatch-14853.rs:14:15
   |
LL |     fn yay<T: Debug>(_: Option<Self>, thing: &[T]);
   |     ----------------------------------------------- definition of `yay` from trait
...
LL |     fn yay<T: Str>(_:Option<X>, thing: &[T]) {
   |               ^^^ impl has extra requirement `T: Str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0276`.
